--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,6 @@
 
 <footer class="footer">
   <div class="container">
-      <span>All Rights Reserved 2019 @JavaGuides</span>
+     <span class="h3">Devloped By Nageswararao </span>
   </div>
 </footer>
